[package]
name = "tarnish"
default-run = "tarnish_bin"
version = "0.1.0"
authors = ["Malek Hodroj <pocmalek@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tarnish_bin"
path = "src/main.rs"



[dependencies]
stereokit-macros = {path="../stereokit-macros"}
stereokit-rs = {path="../stereokit-rs-2"}
stereokit-sys = "0.1.0"